style.css
.header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 15px 0;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 10;
}

.logo {
    color: rgb(240, 102, 102);;
    font-size: 20px;
    margin-left: 40px;
}

.header ul {
    display: flex;
    gap:20px; 
    flex-direction: row;
    margin-right: 40px;
    font-weight: bold;
}

.header a {
    color: whitesmoke;
    text-decoration: none;
    font-size: 18px;
}

.header a:hover {
    opacity: 0.7;
}

.home {
    background: 
    linear-gradient(
        rgba(0, 0, 0, 0.9),
        rgba(0, 0, 0, 0.1)
    ),
    url("images/background.jpg");

    background-size: cover;
    background-position: 40% 50%;

    display: flex;
    flex-direction: column;
    gap: 530px;

    position: relative;
    height: 800px;
    padding: 60px;
}

.home-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-top: 70px;
}

.home h1 {
    color:whitesmoke;
    font-size: 100px;
    padding-left: 60px;
    margin: 0;
}

.home p {
    color: rgb(240, 102, 102);
    font-size: 25px;
    text-align: center;
    padding-left: 90px;
    margin: 0;
}

.home-btn {
    background-color: rgb(240, 102, 102);
    color: whitesmoke;
    font-weight: bold;
    padding: 20px 25px;
    border-radius: 10px;
    margin-left: 600px;
    border-color: transparent;
    text-decoration: none;
    font-size: 16px;
    align-self: center;
    transition: background-color 0.3s ease;
}

.home-btn:hover {
    background-color: rgb(200, 80, 80);
}

.about {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 50px 80px;
    gap: 40px;
}

.about-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 40px;
}

.about h2 {
    color: rgb(240, 102, 102);
    font-size: 60px;
    margin-bottom: 20px;
}

.about ul {
    font-size: larger;
    font-style: italic;
    padding-top: 40px;
}

.btn {
    background-color: rgb(240, 102, 102);
    color: whitesmoke;
    font-weight: bold;
    padding: 15px 20px;
    border-radius: 10px;
    border-color: transparent;
    text-decoration: none;
    font-size: 16px;
    transition: background-color 0.3s ease;
}

.btn:hover {
    background-color: rgb(200, 80, 80);
}

.cars {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: rgb(70, 70, 70);
    text-align: center;
    gap: 40px;
    padding: 70px 80px;
}

.car-gallery {
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.car-gallery figure {
    background: rgb(220, 219, 219);
    padding: 15px;
    border-radius: 20px;
    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
    transition: transform 0.4s ease;
    flex: 1;
}

.car-gallery figure:hover {
    transform: translateY(-5px);
}

.car-gallery img {
    width: 100%;
    height:200px;
    object-fit: cover;
    border-radius: 20px;
    transition: transform 0.4s ease;
}

.car-gallery figure:hover img {
    transform: scale(1.05);
}

.car-gallery figcaption {
    margin-top: 10px;
    font-size: 18px;
    color: rgb(240, 102, 102);
}

.testimonials {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    text-align: center;
    gap: 30px;
    padding: 50px 80px;
}

.testimonials-header {
    color: rgb(240, 102, 102);
    font-size: 30px;
    flex: 1;
}

.testimonials blockquote {
    font-style: italic;
    font-size: 16px;
    color: black;
    flex: 2;
}

footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: rgb(70, 70, 70);
    color: rgb(174, 173, 173);
    text-align: center;
    padding: 30px 20px;
    font-size: 15px;
    height: auto;
}

footer ul {
    display: flex;
    flex-direction: row;
    gap: 10px;
    list-style: none;
}

footer a {
    color: rgb(174, 173, 173);
    text-decoration: none;
}

footer a:hover {
    color: rgb(240, 102, 102);
}

.highlight {
    color: rgb(240, 102, 102);
    font-weight: bold;
}

